--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -1,5 +1,5 @@
 .cards {
-padding-top: 20px;
+padding: 20px 0 40px;
 border-bottom: 1px rgba(33,33,33,0.4) solid;
 }
 
@@ -9,9 +9,9 @@ padding: 0;
 margin: 0;
 display: grid;
 grid-template-columns: repeat(auto-fit, 413px);
-justify-content: center;
 gap: 40px 20px;
-margin-bottom: 36px;
+justify-content: center;
+
 }
 
 @media screen and (max-width: 627px) {
