--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,6 +1,6 @@
 .footer {
   align-self: center;
-  padding: 60px 16px;
+  padding: 60px 0;
   display: flex;
   justify-content: center;
   font-weight: 400;
